--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <title>Bicycle Racing Result Visualization</title>
 </head>
 <body>
-  <div class="details">USA Gross Domestic Product Data</div>
+  <div class="details">Doping in Professional Bicycle Racing</div>
   <svg class="plot"></svg>
-  <div class="description"></div>
   <div class="tooltip hidden"></div>
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="index.js"></script>
